--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,6 @@
-# Compiled smart contracts
-/build
-/cache
-
-# Hardhat files
-/hardhat.config.js
-/hardhat.config.ts
-/typechain-types
-
-# Dependencies
-/node_modules
-
-# Misc
-.DS_Store
-
 node_modules
 .env
+package-lock.json
 
 # Hardhat files
 /cache
