--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "name": "contracts",
+  "version": "1.0.0",
+  "description": "**I. `PerpetualExchangeCore` (Execution Layer)**",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.19"
-  },
-  "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
-    "@pythnetwork/pyth-sdk-solidity": "^4.0.0"
+    "dotenv": "^16.4.7",
+    "hardhat": "^2.22.19"
   }
 }
